# Astrolabe

./: .gitignore  .mcp.json  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/: copilot-instructions.md
FormalAstrolabeCategory/: lakefile.toml  leancode.lean
backend/: astrolabe-server.spec  pyproject.toml  run_server.py
backend/astrolabe/: api.py  astrolabe_router.py  format.py  knowledge_storage.py  server.py  signature_storage.py  storage.py
backend/astrolabe/analysis/: __init__.py  router.py
backend/astrolabe/functors/: __init__.py  base.py
backend/astrolabe/functors/builtin/: __init__.py
backend/astrolabe/functors/builtin/lean/: router.py
backend/astrolabe/functors/file_browser/: router.py
backend/astrolabe/functors/ilean_parser/: __init__.py  import_functor.py
backend/astrolabe/functors/lean_import/: __init__.py  router.py
backend/astrolabe/functors/math_domain/: __init__.py
backend/astrolabe/functors/mdx_docs/: router.py
backend/astrolabe/functors/network_analysis/: __init__.py  centrality.py  graph_builder.py  router.py
backend/astrolabe/functors/project_init/: router.py
backend/astrolabe/functors/signature_crud/: router.py
backend/astrolabe/plugins/: __init__.py  base.py
backend/astrolabe/plugins/builtin/: __init__.py
backend/astrolabe/plugins/builtin/lean/: ilean_parser.py  router.py
backend/astrolabe/routes/: viewport.py
backend/astrolabe/signature/: __init__.py  mor.py  obj.py  state.py
backend/astrolabe_app/: PROPAGATION.md  __init__.py  api.py  astrolabe_router.py  migrate.py  server.py  storage.py
backend/astrolabe_app/analysis/: centrality.py  cluster.py  community.py  dag.py  degree.py  graph_builder.py  merge_proofs.py  router.py  semantic_propagation.py  skeleton_graph.py
backend/astrolabe_app/routes/: project.py
backend/netmath/: __init__.py  knowledge_storage.py  server.py
backend/netmath/analysis/: __init__.py  graph_builder.py
backend/netmath/models/: edge.py  node.py  state.py
backend/tests/: test_all_metrics.py  test_analysis_centrality.py  test_analysis_cluster.py  test_analysis_community.py  test_analysis_dag.py  test_analysis_degree.py  test_analysis_graph_builder.py  test_analysis_router.py  test_api_contract.py  test_api_performance.py  test_astrolabe_api.py  test_astrolabe_crud.py  test_betweenness.py  test_categorical_schema.py  test_compat.py  test_entry.py  test_file_content.py  test_files_endpoint.py  test_format.py  test_functor_analysis.py  test_functor_api_paths.py  test_functor_integration.py  test_functor_metadata.py  test_functors.py  test_ilean_dedup.py  test_ilean_endpoint.py  test_ilean_functor.py  test_ilean_plugin.py  test_knowledge_no_style.py  test_leannets_namespace.py  test_math_domain.py  test_merge_proofs.py  test_metadata.py  test_migrate.py  test_network_analysis_functor.py  test_no_viewport.py  test_node_count.py  test_plugin_analysis.py  test_plugin_integration.py  test_plugin_metadata.py  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  lib.rs  main.rs  pty.rs
(+484 files in other folders)
