[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrolabe-app"
version = "0.2.0"
description = "Astrolabe: Math Knowledge Network"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Xinze Li" }
]
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
topology = [
    "gudhi>=3.8",  # Betti numbers, persistent homology
    "giotto-tda>=0.6",  # TDA toolkit
    "kmapper>=2.0",  # Mapper algorithm
]
embedding = [
    "node2vec>=0.4",  # Node2Vec embedding
    "umap-learn>=0.5",  # UMAP embedding
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",  # For FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["astrolabe_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
